# tiktok-pakuri

./: .gitignore  README.md  package.json  tiktok-pakuri.code-workspace
app/: FeedScreen.tsx
backend/: .dockerignore  .env.example  Cargo.toml  backend.code-workspace  docker-compose.yaml
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: error.rs
backend/crates/shared/src/dto/: feed.rs
backend/services/api/: Cargo.toml  Dockerfile
backend/services/api/migrations/: 0001_init.sql
backend/services/api/src/: app.rs  config.rs  main.rs
backend/services/api/src/domain/: feed_service.rs
backend/services/api/src/handlers/: feed_get.rs  mod.rs
backend/services/api/src/repo/: feed_repo.rs
backend/services/api/src/routes/: feed.rs  health.rs  mod.rs
backend/services/worker/: Cargo.toml  Dockerfile
backend/services/worker/src/: main.rs
frontend/: README.md  frontend.code-workspace  package-lock.json  package.json
frontend/api/: feed.ts
frontend/app/: FeedScreen.tsx  VideoCell.tsx  index.tsx  styles.ts
