[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../crates/shared" }

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = "0.4"
anyhow = "1"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
