[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../crates/shared" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 後で使う想定
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "macros"] }